transition flicker fixed on safari

--- a/src/components/variantsInput/variantsInput.css
+++ b/src/components/variantsInput/variantsInput.css
@@ -19,6 +19,8 @@
   border-radius: 100%;
   position: absolute;
   top: 50%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   transform: translateY(-50%);
   left: 50%;
   background-color: inherit;
@@ -26,7 +28,6 @@
   display: block;
   visibility: visible;
   border: 1px solid #f1f1f1;
-  transition: 0.5s all ease-in-out;
 }
 
 .color-option:checked:after {
@@ -39,5 +40,4 @@
   display: block;
   visibility: visible;
   box-shadow: 0px 0px 0px 3px black;
-  transition: 0.5s all ease-in-out;
 }
